Update TableFactory pom.xml for Java 11 and remove incorrect TODO comments
Co-authored-by: natechadwick <1232206+natechadwick@users.noreply.github.com>